Bug 138183 - Failed to copy and paste in calc
Summary: Failed to copy and paste in calc
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All Linux (All)
: highest critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.4
Keywords: bibisected, bisected, regression
: 138228 138298 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-11-13 11:02 UTC by Kevin Suo
Modified: 2020-11-18 12:49 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2020-11-13 11:02:52 UTC
Steps to Reproduce:
1. New calc, type "1" in any cell.
2. Select this cell, ctrl+c and ctrl+v to paste to another cell.
3. Select this cell again and ctrl+c and ctrl+v to a third cell.

-> paste failed in step 3.

Repduced in 
commit 88a10c151a373d5ca2b48bf8c18b3a36b6885961
Date:   Thu Nov 12 11:56:31 2020 +0000

also produced with its next commit which is for the fix of bug 138047.
Fedora 32 gtk3.
Comment 1 Timur 2020-11-13 14:50:14 UTC
I confirmed in 7.1+ with GTK3. 
When no paste, if I copy again, it pastes that time. 

commit 922a396289b0ffbb31f8419aa4bcfb1b68be9310
Date:   Fri Nov 6 10:44:49 2020 +0100
    source 2194e2dd7e54ad6babec26cf05226b35d34cd309
    previous source 4a22047371503602339d8aee690da0ab536ec7fe

author	Caolán McNamara <caolanm@redhat.com>	2020-11-05 11:14:23 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2020-11-06 10:33:40 +0100
commit 2194e2dd7e54ad6babec26cf05226b35d34cd309 (patch)
tree 08a33cd85a6968c2e2da233e7237a3a0f4a05b00
parent 4a22047371503602339d8aee690da0ab536ec7fe (diff)
Resolves: tdf#137181 set the clipboard asynchronously
Comment 2 Kevin Suo 2020-11-13 15:39:05 UTC
Adding cc Caolán: would you please take a look, as it bisected to one of your commit.
Comment 3 Kevin Suo 2020-11-15 15:21:46 UTC
Just a reminder, this also effects the 7.0+ as the commit 922a396289b0ffbb31f8419aa4bcfb1b68be9310 was also applied there.
Comment 4 Kevin Suo 2020-11-16 09:21:25 UTC
This also affects other components such as Writer.
Comment 5 Caolán McNamara 2020-11-16 10:41:28 UTC
seems to be ok under wayland, but fails under X for me
Comment 6 Kevin Suo 2020-11-16 14:12:35 UTC
*** Bug 138228 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2020-11-17 08:54:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f98735583a666e0f06d018cf93b79c74b7ce7b80

tdf#138183 sync pending clipboard assign on clipboard ownership-change

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2020-11-17 08:56:10 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/ed124c84c38237c8769b0685ba1e9b3dd87482de

tdf#138183 sync pending clipboard assign on clipboard ownership-change

It will be available in 7.0.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Timur 2020-11-18 10:52:05 UTC
Kevin, please test and yet Verified if OK (I cannot these days).
Comment 10 Kevin Suo 2020-11-18 11:02:15 UTC
I verify that it is now fixed on master and libreoffice-7-0. It works perfect.Thank you Caolán!
Comment 11 Kevin Suo 2020-11-18 12:49:25 UTC
*** Bug 138298 has been marked as a duplicate of this bug. ***