tdf#138183 sync pending clipboard assign on clipboard ownership-change

Change-Id: I325add499fbd4d11a942ce550346dcbcb5343e4d